Fix Bug #59465 btr_estimate_number_of_different_key_vals use incorrect offset for external_size

rb://581 approved by Marko